--- a/trunk/ChilliSoft.Crypt.v2/Chillisoft.Crypt.v2.csproj
+++ b/trunk/ChilliSoft.Crypt.v2/Chillisoft.Crypt.v2.csproj
@@ -108,7 +108,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
