--- a/trunk/Chillisoft.Bo.Loaders.v2/Chillisoft.Bo.Loaders.v2.csproj
+++ b/trunk/Chillisoft.Bo.Loaders.v2/Chillisoft.Bo.Loaders.v2.csproj
@@ -222,6 +222,6 @@
     <PreBuildEvent>
     </PreBuildEvent>
     <PostBuildEvent>$(ProjectDir)CopyDTDsToBuild.cmd $(ProjectDir) . $(ProjectDir)..\Build\Debug
-</PostBuildEvent>
+$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
