--- a/trunk/Chillisoft.Bo.v2/Chillisoft.Bo.v2.csproj
+++ b/trunk/Chillisoft.Bo.v2/Chillisoft.Bo.v2.csproj
@@ -356,7 +356,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
