--- a/trunk/Chillisoft.Build.v2/Chillisoft.Build.v2.csproj
+++ b/trunk/Chillisoft.Build.v2/Chillisoft.Build.v2.csproj
@@ -227,6 +227,7 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>copy $(SolutionDir)Build\debug\*.* $(SolutionDir)bin\</PostBuildEvent>
+    <PostBuildEvent>copy $(SolutionDir)Build\debug\*.* $(SolutionDir)bin\
+$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
