--- a/trunk/Chillisoft.Test.v2/Chillisoft.Test.v2.csproj
+++ b/trunk/Chillisoft.Test.v2/Chillisoft.Test.v2.csproj
@@ -115,7 +115,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
