--- a/trunk/ChilliSoft.Reporting.ExcelRenderer.v2/Chillisoft.Reporting.ExcelRenderer.v2.csproj
+++ b/trunk/ChilliSoft.Reporting.ExcelRenderer.v2/Chillisoft.Reporting.ExcelRenderer.v2.csproj
@@ -105,7 +105,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
