--- a/trunk/ChilliSoft.Reporting.Export.v2/Chillisoft.Reporting.Export.v2.csproj
+++ b/trunk/ChilliSoft.Reporting.Export.v2/Chillisoft.Reporting.Export.v2.csproj
@@ -132,7 +132,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
