--- a/trunk/Chillisoft.Db.Utils.v2/Chillisoft.Db.Utils.v2.csproj
+++ b/trunk/Chillisoft.Db.Utils.v2/Chillisoft.Db.Utils.v2.csproj
@@ -95,7 +95,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
