--- a/trunk/Chillisoft.Generic.v2/Chillisoft.Generic.v2.csproj
+++ b/trunk/Chillisoft.Generic.v2/Chillisoft.Generic.v2.csproj
@@ -275,7 +275,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
