--- a/trunk/Chillisoft.Test.Setup.v2/Chillisoft.Test.Setup.v2.csproj
+++ b/trunk/Chillisoft.Test.Setup.v2/Chillisoft.Test.Setup.v2.csproj
@@ -112,7 +112,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
