--- a/trunk/Chillisoft.Test.UI.Application.v2/Chillisoft.Test.UI.Application.v2.csproj
+++ b/trunk/Chillisoft.Test.UI.Application.v2/Chillisoft.Test.UI.Application.v2.csproj
@@ -170,7 +170,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
