--- a/trunk/Chillisoft.Test.UI.BOControls.v2/Chillisoft.Test.UI.BOControls.v2.csproj
+++ b/trunk/Chillisoft.Test.UI.BOControls.v2/Chillisoft.Test.UI.BOControls.v2.csproj
@@ -199,7 +199,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
