--- a/trunk/Chillisoft.Test.Utilities.v2/Chillisoft.Test.Utilities.v2.csproj
+++ b/trunk/Chillisoft.Test.Utilities.v2/Chillisoft.Test.Utilities.v2.csproj
@@ -117,7 +117,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
