Renamed CoreBiz* and Core* to Habanero*

--- a/trunk/Chillisoft.Bo.v2/Chillisoft.Bo.v2.csproj
+++ b/trunk/Chillisoft.Bo.v2/Chillisoft.Bo.v2.csproj
@@ -227,7 +227,7 @@
     <Compile Include="ClassDefinition\SuperClassDesc.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CoreBizException.cs">
+    <Compile Include="HabaneroException.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CriteriaManager\CriteriaExpression.cs">
