--- a/trunk/Chillisoft.Generic.v2/Chillisoft.Generic.v2.csproj
+++ b/trunk/Chillisoft.Generic.v2/Chillisoft.Generic.v2.csproj
@@ -104,7 +104,7 @@
     <Compile Include="ConsoleProgressIndicator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CoreBizException.cs">
+    <Compile Include="HabaneroException.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CustomProperty.cs">
