More error messages new DatabaseConnectionException and PropertyNameInvalidException

--- a/trunk/Chillisoft.Db.v2/Chillisoft.Db.v2.csproj
+++ b/trunk/Chillisoft.Db.v2/Chillisoft.Db.v2.csproj
@@ -145,6 +145,7 @@
     <Compile Include="DatabaseConnectionAccess.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DatabaseConnectionException.cs" />
     <Compile Include="DatabaseConnectionFactory.cs">
       <SubType>Code</SubType>
     </Compile>
