--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -388,7 +388,7 @@
     <PreBuildEvent>
     </PreBuildEvent>
     <PostBuildEvent>copy $(ProjectDir)\Loaders\DTDs\*.dtd $(TargetDir)
-rem copy $(ProjectDir)\Loaders\DTDs\*.dtd $(ProjectDir)..\Build\Debug
+copy $(ProjectDir)\Loaders\DTDs\*.dtd $(ProjectDir)..\Build\Debug
 $(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
