Renamed two files

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -144,7 +144,7 @@
     <Compile Include="BOEventArgs.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BOLookupListSource.cs">
+    <Compile Include="BusinessObjectLookupListSource.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ByteString.cs" />
