More results from renaming of BO interface to IBusinessObject, and IFilterClause

--- a/trunk/Habanero.Generic/Habanero.Generic.csproj
+++ b/trunk/Habanero.Generic/Habanero.Generic.csproj
@@ -154,7 +154,7 @@
     <Compile Include="ILookupListSource.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BusinessObject.cs" />
+    <Compile Include="IBusinessObject.cs" />
     <Compile Include="INumberGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
